--- a/templates/home.html
+++ b/templates/home.html
@@ -3,10 +3,11 @@
 
 
 <main>
-    <div class="container ">
+   <div class="container ">
         <div class="row">
+            <div class="col-12 p-5 px-10 "><div class="border rounded" style="height: 100px;">AD</div></div>
+         
             <div class="col col-md-9 p-5">
-
                 <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                     <h3>Pursue a career as a Software Engineer (SWE)</h3>
                     <p>
@@ -21,13 +22,44 @@
                     <p>
                         3. Seek assistance in job placement through programs like...
                     </p>
+                    <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
+                    <a href="/swe_career_guide" type="button" class="btn btn-outline-secondary">Comprehensive Step-by-Step Guide</a>
                 </div>
                 
             </div>
+
             <div class="d-none d-md-block col-md-auto">
-             AD
-            </div>
+                <div class="border rounded" style="height: 350px; width: 150px;">AD</div>
+            </div> 
         </div>
+
+        <div class="col col-md-9 p-5">
+
+            
+            <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                <h3>Solutions to Coding Challenges</h3>
+                <p>
+                    Are you facing challenges when attempting to solve a coding problem?
+                </p>
+                
+                <p> 
+                    Explore available solutions for the given challenge from platforms such as LeetCode, HackerRank, or Project Euler. 
+                </p>   
+                <p>
+                    Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
+                </p>
+
+                <a href="/code_solutions" type="button" class="btn btn-outline-secondary">Search now</a>
+            </div>
+            
+            
+        </div>
+
+        <div class="col-12 p-5 px-10 "><div class="border rounded" style="height: 100px;">AD</div></div>
+       
+
+        <div class="d-none d-md-block col-md-auto"></div> 
+    </div>
     </div>
 </main>
 
