--- a/templates/base.html
+++ b/templates/base.html
@@ -6,9 +6,10 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <!-- my styles -->
-        <!-- <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"> -->
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     </head>
-    <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%);">
+    <!-- <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%);"> -->
+        <body>
 
         <!-- nav -->
         <!-- TODO: >>> UX/UI Figma Design -->
@@ -73,7 +74,7 @@
                             </li>
     
                             <li class="nav-item">
-                                <a class="nav-link" href="/code_solutions">SWE Career Guide</a>
+                                <a class="nav-link" href="/swe_career_guide">SWE Career Guide</a>
                             </li>
                         </ul>
                         <form class="d-flex" role="search">
@@ -113,10 +114,10 @@
                         <a href="#!" class="text-reset">Home</a>
                     </p> -->
                     <p>
-                        <a href="#!" class="text-reset">Coding Solutions</a>
+                        <a href="/code_solutions" class="text-reset">Coding Solutions</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">SWE Career Guide</a>
+                        <a href="/swe_career_guide" class="text-reset">SWE Career Guide</a>
                     </p>
                 </div>
                 <!-- Grid column -->
