--- a/templates/home.html
+++ b/templates/home.html
@@ -4,10 +4,10 @@
 
 <main>
    <div class="container ">
-        <div class="row">
-            <div class="col-12 p-5 px-10 "><div class="border rounded" style="height: 100px;">AD</div></div>
+        <div class="row py-5">
+            <!-- <div class="col-12 p-5 px-10 "><div class="border rounded" style="height: 100px;">AD</div></div> -->
          
-            <div class="col col-md-9 p-5">
+            <div class="col col-md-9">
                 <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                     <h3>Pursue a career as a Software Engineer (SWE)</h3>
                     <p>
@@ -23,39 +23,194 @@
                         3. Seek assistance in job placement through programs like...
                     </p>
                     <p class="p-3"><i>With these steps accomplished, you'll be well-prepared to pursue your desired Software Engineer position.</i></p>
-                    <a href="/swe_career_guide" type="button" class="btn btn-outline-secondary">Comprehensive Step-by-Step Guide</a>
+                    <a href="#steps" type="button" class="btn btn-outline-secondary">Comprehensive Step-by-Step Guide</a>
                 </div>
                 
             </div>
 
             <div class="d-none d-md-block col-md-auto">
-                <div class="border rounded" style="height: 350px; width: 150px;">AD</div>
+                <!-- <div class="border rounded" style="height: 350px; width: 150px;">AD</div> -->
             </div> 
         </div>
 
-        <div class="col col-md-9 p-5">
 
-            
-            <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
-                <h3>Solutions to Coding Challenges</h3>
-                <p>
-                    Are you facing challenges when attempting to solve a coding problem?
-                </p>
-                
-                <p> 
-                    Explore available solutions for the given challenge from platforms such as LeetCode, HackerRank, or Project Euler. 
-                </p>   
-                <p>
-                    Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
-                </p>
+        <div class="row">
+            <div class="col-12 p-2 "></div>
+         
+            <div class="col col-md-9 p-2">
+                <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                    <h3 id="steps">The three steps to get you Software Engineering (SWE) career</h3>
+                   
+                            <span>1. Choose a, b, c, or d:</span>
+                            <ol type="A" >
+                                <li class="p-1">
+                                    <span>Community college certification:</span>
+                                    <ul>
+                                        <li class="p-1">
+                                            <i>Necessitates the possession of a high school diploma.</i>
+                                        </li>
+                                        <li class="p-1">
+                                            Please be aware that there may be associated costs with certain programs (notably, CCSF is tuition-free for San Francisco residents). Generally, community colleges tend to be more cost-effective compared to boot camps and have the added benefit of providing college credits.
+                                        </li>
+                                        <li class="p-1">
+                                            <span>Search for a certification in any of the following domains: </span>
 
-                <a href="/code_solutions" type="button" class="btn btn-outline-secondary">Search now</a>
+                                            <br>
+                                            <p class="pt-2 px-5 pb-0">
+                                                <b>Take Note: </b>
+                                                <br>
+                                                <i style="font-size: x-small;">It is crucial to acknowledge that locating a certificate program in one of these specific areas at your particular college may pose challenges. In such instances, I would advise consulting with a college counselor or, alternatively, seeking guidance from a seasoned software engineer well-versed in what could constitute as an FWE, BEW, or FSW certificate.</i>
+                                            </p>
+                                            
+                                            <ul>
+                                                <li>
+                                                    <span>Front End Web Development/Engineer (FEW)</span>
+                                                    <ul>
+                                                        <li style="font-size: x-small;">
+                                                            You may want to contemplate the <a href="https://ccsf.curricunet.com/Report/Program/GetReport/1551?reportId=29">"Advanced Web Development Techniques Certificate of Achievement"</a> program offered by CCSF as a notable example. While this program might not be explicitly labeled as a Front End Web Development (FEW) program, it comprehensively covers the vital topics essential for you to acquire the skills needed for a career as a Front End Web Engineer.
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                                <li>
+                                                    <span>Back End Web Development/Engineer (BEW)</span>
+                                                    <ul>
+                                                        <li style="font-size: x-small;">
+                                                            The <a href="https://ccsf.curricunet.com/Report/Program/GetReport/1438?reportId=29">"Build Automation for DevOps & QA Certificate of Achievement"</a> offered by City College of San Francisco (CCSF) could potentially fulfill the requirements for back-end web (BEW) development expertise. This is contingent on the selection of either the optional "CS 131B - Programming Fundamentals: Python" or the "CS 132A - Ruby Programming" course. Opting for "CNIT 133 - JavaScript, jQuery, AJAX" in lieu of Python or Ruby does not align with the back-end web focus, as JavaScript is predominantly a front-end language. While the program does include instruction in shell scripting and DevOps, essential components of back-end web development, proficiency in a back-end specific language, such as Python or Ruby, is crucial. Mastery of these languages, in combination with DevOps skills, is integral to being fully versed as a back-end developer.
+                                                            <br>
+                                                            <i style="font-size: xx-small;">"I recommend choosing the Python course over Ruby."</i>
+                                                        </li>
+                                                    </ul>
+
+                                                </li>
+                                                <li>
+                                                    <span>Full Stack Web Development/Engineer (FSW)/(FWE)</span>
+                                                    <ul>
+                                                        <li style="font-size: x-small;">
+                                                            Consider the <a href="https://ccsf.curricunet.com/Report/GetReport?entityId=1058&entityType=Program&reportId=29">"Web Application Programming Certificate of Achievement"</a> program provided by City College of San Francisco (CCSF) as an illustrative case. Although this program may not be specifically categorized as an FWE (Full-Stack Web Engineer) program, it does encompass the essential subjects required to equip you with the skills necessary for a career as a Full Stack Software Engineer.
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="p-1">
+                                    <span>Participate in either <b>Code the Dream</b> or <b>Meta Mission Techies</b> programs:</span>
+                                    <ul>
+                                        <li><i>accessible to individuals without a high school diploma</i></li>
+                                        <li><i>It's important to note that Meta Mission Techies exclusively serves residents of San Francisco.</i></li>
+                                        <li>Both programs are offered <b>free</b> of charge</li>
+                                        <li>It is imperative that you successfully earn the certificate they offer as part of the program.</li>
+                                    </ul>
+                                </li>
+                                <!-- 
+
+
+
+ If you don't have high school diploma and you are unable to attend Meta Mission Techies or Code The Dream I would suggest doing a Boot Camp (only if you don’t have the time to get a high school diploma as bootstraps can be expensive)
+Expensive
+They tend to promise you more than they deliver
+If you have the time to get your high school diploma do that and then go to community college and get a certificate 
+Follow Step “a” above after getting your High School diploma -->
+                            </ol>
+                        
+                </div>
             </div>
-            
-            
-        </div>
 
-        <div class="col-12 p-5 px-10 "><div class="border rounded" style="height: 100px;">AD</div></div>
+            <div class="d-none d-md-block col-md-auto">
+            </div> 
+       
+
+            <div class="col col-md-9 p-2">
+                <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                   
+                            <span>2. You must get good at the technical interview process</span>
+                            <ol type="A">
+
+                                <li>
+                                    <span>Structy.com</span>
+                                    <ul>
+                                        <li>Cost money</li>
+                                        <li>This is my most recommended as it is very easy to understand with tons of videos explaining everything</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span>AlgoExpert.com</span>
+                                    <ul>
+                                        <li>Cost money</li>
+                                        <li>Easy to understand as it has video explanations</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span>Crack The Coding Interview</span>
+                                    <ul>
+                                        <li>Cost money</li>
+                                        <li>Must be good at reading and learning from books</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <span>Solve LeetCode, Hacker Rank, and Project Euler coding challenges</span>
+                                    <ul>
+                                        <li><b>Free</b> and paid premium version</li>
+                                        <li>If you don't want to spend moeny, you can utilize this website in order to understand how to solve the coding challenge.</li>
+                                    </ul>
+                                </li>
+                            </ol>
+                       
+                </div>
+            </div>
+
+            <div class="col col-md-9 p-2">
+                <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+
+                   
+                            <span>3. Seek assistance in job placement through programs like...</span>
+                            <!-- <ol type="A">
+                                <li>
+                                    <span>___</span>
+                                    <ul>
+                                        <li>_____</li>
+                                    </ul>
+                                </li>
+                            </ol> -->
+                       
+                </div>
+            </div>
+
+            <div class="col-12 p-5 px-10 "></div>
+
+        </div>
+    </div>
+
+
+    
+
+        <!-- <div class="row">
+            <div class="col col-md-9 p-5">
+
+                
+                <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                    <h3>Solutions to Coding Challenges</h3>
+                    <p>
+                        Are you facing challenges when attempting to solve a coding problem?
+                    </p>
+                    
+                    <p> 
+                        Explore available solutions for the given challenge from platforms such as LeetCode, HackerRank, or Project Euler. 
+                    </p>   
+                    <p>
+                        Here, you will discover a dedicated search engine designed to assist you in finding the appropriate website housing the solution to your coding challenge.
+                    </p>
+
+                    <a href="/code_solutions" type="button" class="btn btn-outline-secondary">Search now</a>
+                </div>
+                
+                
+            </div>
+
+            <div class="col-12 p-5 px-10 "><div class="border rounded" style="height: 100px;">AD</div></div>
+
+        </div> -->
        
 
         <div class="d-none d-md-block col-md-auto"></div> 
