--- a/templates/home.html
+++ b/templates/home.html
@@ -42,6 +42,16 @@
                     <h3 id="steps">The three steps to get you Software Engineering (SWE) career</h3>
                    
                             <span>1. Choose a, b, c, or d:</span>
+
+                            <p class="pt-2 px-5 pb-0">
+                                <b><span style="color: red;">*</span>Important: </b>
+                                <br>
+                                <span>Ensure that one of your initial courses focuses on a programming language, such as JavaScript, Python, Java, etc., Why?</span>
+                                
+                                <br>
+                                <i style="font-size: x-small;">Commencing your technical interview preparation at the earliest possible juncture offers distinct advantages. Nevertheless, it is paramount to underscore the prerequisite of acquiring proficiency in a programming language before embarking on this endeavor. To facilitate this, it is recommended to prioritize the completion of your initial programming language course. Furthermore, at the completion it is advisable to initiate the second step concurrently with the first, thus enabling you to commence the arduous and demanding process of dedicated technical interview practice even before you have concluded the first step. This approach ultimately serves to expedite your journey toward achieving mastery in this specialized domain.</i>
+                            </p>
+
                             <ol type="A" >
                                 <li class="p-1">
                                     <span>Community college certification:</span>
@@ -50,14 +60,14 @@
                                             <i>Necessitates the possession of a high school diploma.</i>
                                         </li>
                                         <li class="p-1">
-                                            Please be aware that there may be associated costs with certain programs (notably, CCSF is tuition-free for San Francisco residents). Generally, community colleges tend to be more cost-effective compared to boot camps and have the added benefit of providing college credits.
+                                            Please be aware that there may be associated costs with certain programs (notably, CCSF is tuition-free for San Francisco residents). Generally, community colleges tend to be more cost-effective compared to boot camps and have the added benefit of providing college credits. It is important to note that colleges may offer a selection of courses that are not accredited.
                                         </li>
                                         <li class="p-1">
                                             <span>Search for a certification in any of the following domains: </span>
 
                                             <br>
                                             <p class="pt-2 px-5 pb-0">
-                                                <b>Take Note: </b>
+                                                <b><span style="color: red;">*</span>Take Note: </b>
                                                 <br>
                                                 <i style="font-size: x-small;">It is crucial to acknowledge that locating a certificate program in one of these specific areas at your particular college may pose challenges. In such instances, I would advise consulting with a college counselor or, alternatively, seeking guidance from a seasoned software engineer well-versed in what could constitute as an FWE, BEW, or FSW certificate.</i>
                                             </p>
@@ -91,6 +101,9 @@
                                                     </ul>
                                                 </li>
                                             </ul>
+
+                                            
+
                                         </li>
                                     </ul>
                                 </li>
@@ -103,16 +116,29 @@
                                         <li>It is imperative that you successfully earn the certificate they offer as part of the program.</li>
                                     </ul>
                                 </li>
-                                <!-- 
 
+                                <li class="p-1">
+                                    <span>SWE <b>Bootcamp</b></span>
 
+                                    <ul>
+                                        <li><span style="color: red;">*</span>In the event that an individual lacks a high school diploma, possesses significant financial means, and encounters obstacles preventing enrollment in Meta Mission Techies or Code The Dream, I would propose the exploration of enrollment in a specialized Boot Camp. This avenue proves especially feasible for individuals contending with time constraints that render the pursuit of a conventional high school diploma unattainable. However, it is essential to bear in mind that boot camp programs can incur substantial costs. Consequently, if one has the opportunity to dedicate the necessary time to attain a high school diploma, it is advisable to pursue this path and complement it with the acquisition of a certificate from a community college (as noted in step D -> A).</li>
+                                        <li><i>Expensive</i></li>
+                                        <li>If you have the time to get your high school diploma do that and then go to community college and get a certificate Follow Step “a” above after getting your High School diploma</li>
+                                    </ul>
+                                </li>
 
- If you don't have high school diploma and you are unable to attend Meta Mission Techies or Code The Dream I would suggest doing a Boot Camp (only if you don’t have the time to get a high school diploma as bootstraps can be expensive)
-Expensive
-They tend to promise you more than they deliver
-If you have the time to get your high school diploma do that and then go to community college and get a certificate 
-Follow Step “a” above after getting your High School diploma -->
+                                <li class="p-1">
+                                    <span>High School diploma -> College Certification</span>
+
+                                    <ul>
+                                        <li>If you are able to allocate the necessary time, it is advisable to first pursue your high school diploma, and subsequently, advance to Step "A." <i style="font-size: x-small;">Enroll in a community college to pursue a certificate in fields such as FEW (Front End Web), BEW (Back End Web) or FSW (Full Stack Web).</i></li>
+                                        <li><i>Time consuming</i></li>
+                                    </ul>
+                                </li>
                             </ol>
+
+                            <br>
+                            
                         
                 </div>
             </div>
