Written content update

--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
          
             <div class="col col-md-9 p-2">
                 <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
-                    <h3 id="steps">The three steps to get you Software Engineering (SWE) career</h3>
+                    <h3 id="steps">The three steps to kickstart your Software Engineering (SWE) career are as follows:</h3>
                    
                             <span>1. Choose a, b, c, or d:</span>
 
@@ -118,7 +118,7 @@
                                 </li>
 
                                 <li class="p-1">
-                                    <span>SWE <b>Bootcamp</b></span>
+                                    <span>Coding <b>Bootcamp</b></span>
 
                                     <ul>
                                         <li><span style="color: red;">*</span>In the event that an individual lacks a high school diploma, possesses significant financial means, and encounters obstacles preventing enrollment in Meta Mission Techies or Code The Dream, I would propose the exploration of enrollment in a specialized Boot Camp. This avenue proves especially feasible for individuals contending with time constraints that render the pursuit of a conventional high school diploma unattainable. However, it is essential to bear in mind that boot camp programs can incur substantial costs. Consequently, if one has the opportunity to dedicate the necessary time to attain a high school diploma, it is advisable to pursue this path and complement it with the acquisition of a certificate from a community college (as noted in step D -> A).</li>
@@ -151,27 +151,55 @@
                 <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                    
                             <span>2. You must get good at the technical interview process</span>
+
+                            <p class="pt-2 px-5 pb-0">
+                                <b><span style="color: red;">*</span>Important: </b>
+                                <br>
+                                <span>Your objective in this endeavor is to attain a high level of proficiency in technical interviews, enabling you to effectively tackle coding challenges classified at the most demanding difficulty level, such as "Hard." Although this is your goal it is arguably unnecessary.</span>
+                                
+                                <br>
+                                <i class="p-4" style="font-size: x-small;">Many individuals secure employment without excelling in technical interviews. It's entirely possible to secure a job even if you struggle with technical interviews, although this may limit your access to various opportunities. It's important to note that most technical interviews are typically of moderate difficulty, with some being easier. In certain cases, you may not even encounter a technical interview.</i>
+                                <br>
+                                <i class="p-4" style="font-size: x-small;">However, your prospects of securing a job significantly improve if you can successfully navigate technical interviews at the "Hard" difficulty level. If you find that completing options A, B, C, or D still doesn't enable you to excel in coding challenges at the highest difficulty level. You may want to contemplate completing one additional or all of options A, B, C, & D. If challenges persist despite these efforts, you may want to explore option "E."</i>
+                                <br>
+                                <i class="p-4" style="font-size: x-small;">Option "E" encompasses a multitude of technical coding challenges.  Notably, option "E" has a cost-free vertion, making it accessible even if financial constraints limit your ability to pursue other options. Although "E" is a more challenging path to proficiency, with persistence and practice, you should eventually develop the skills needed to excel in coding challenges at the highest difficulty level.</i>
+                            </p>
+                            
+
                             <ol type="A">
 
                                 <li>
-                                    <span>Structy.com</span>
+                                    <a href="https://structy.net">Structy.net</a>
                                     <ul>
-                                        <li>Cost money</li>
-                                        <li>This is my most recommended as it is very easy to understand with tons of videos explaining everything</li>
+                                        <li>Involves a financial expense.</li>
+                                        <li>I highly recommend this option as it offers a straightforward and comprehensible approach, supplemented by an abundance of instructional videos that thoroughly elucidate every aspect.</li>
+                                        <li>Proficiency in <b>one of the following programming languages is necessity: JavaScript, Python, C++, or Java.</b></li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <span>AlgoExpert.com</span>
+                                    <a href="https://www.algoexpert.io">AlgoExpert.io</a>
                                     <ul>
-                                        <li>Cost money</li>
-                                        <li>Easy to understand as it has video explanations</li>
+                                        <li>Involves a financial expense.</li>
+                                        <li>It is easily comprehensible, thanks to its comprehensive video explanations.</li>
+                                        <li><b>Familiarity with the Python</b> programming language is a prerequisite.</li>
+                                        <li>Mock interview sessions</li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <span>Crack The Coding Interview</span>
+                                    <a href="https://coderbyte.com">Coderbyte.com</a>
                                     <ul>
-                                        <li>Cost money</li>
+                                        <li>Involves a financial expense.</li>
+                                        <li>It is often easier to comprehend, primarily due to the availability of video explanations.</li>
+                                        <li>Proficiency in the programming language <b>JavaScript is required</b></li>
+                                        <li>Mock interviews sessions</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="https://www.crackingthecodinginterview.com">Crack The Coding Interview (Book)</a>
+                                    <ul>
+                                        <li>Involves a financial expense.</li>
                                         <li>Must be good at reading and learning from books</li>
+                                        <li>It is strongly recommended to be at somewhat familiar with strongly typed languages and advanced algorithms such as Graphs, Trees, Linked Lists, etc.</li>
                                     </ul>
                                 </li>
                                 <li>
