main writen content complete v1.0.0

--- a/templates/home.html
+++ b/templates/home.html
@@ -52,6 +52,24 @@
                                 <i style="font-size: x-small;">Commencing your technical interview preparation at the earliest possible juncture offers distinct advantages. Nevertheless, it is paramount to underscore the prerequisite of acquiring proficiency in a programming language before embarking on this endeavor. To facilitate this, it is recommended to prioritize the completion of your initial programming language course. Furthermore, at the completion it is advisable to initiate the second step concurrently with the first, thus enabling you to commence the arduous and demanding process of dedicated technical interview practice even before you have concluded the first step. This approach ultimately serves to expedite your journey toward achieving mastery in this specialized domain.</i>
                             </p>
 
+                            <p class="pt-2 px-5 pb-0">
+                                <b><span style="color: red;">*</span>Important: </b>
+                                <br>
+                                <span>Retain all of your school projects in <a href="https://github.com">GitHub</a> and promptly commence the development of personal projects to enhance your résumé.</span>
+                                
+                                <br>
+                                <i style="font-size: x-small;">Upon successful completion of your initial technical course, it is advisable to update your résumé and include a comprehensive selection of projects accomplished during the course. Furthermore, since you have completed your first technical course, it is prudent to embark on personal project development and subsequently incorporate them into your résumé. For inspiration, one can explore YouTube for projects created by others in the field of their programming languages and technical skills, aiming to undertake similar initiatives. Ensuring the inclusion of these projects in your résumé is of paramount importance. It is advisable to keep your résumé concise, usually limited to one page, you should strive to include as many pertinent projects as possible within this page, as they are deemed valuable experiential assets. <b>Ensuring the availability of your projects on <a href="https://github.com">GitHub</a> is imperative.</b></i>
+                            </p>
+
+                            <p class="pt-2 px-5 pb-0">
+                                <b><span style="color: red;">*</span>Important: </b>
+                                <br>
+                                <span>Initiate the process of applying for internships immediately upon the conclusion of your initial technical course.</span>
+                                
+                                <br>
+                                <i style="font-size: x-small;">Internships hold a distinct advantage over projects when it comes to enhancing your résumé, and in some cases, you can secure an internship even before completing your first technical course. The sooner you obtain an internship and include it on your résumé, the more it will bolster your chances of securing future employment. I strongly recommend prioritizing paid internships as the preferred choice over unpaid ones.</i>
+                            </p>
+
                             <ol type="A" >
                                 <li class="p-1">
                                     <span>Community college certification:</span>
@@ -198,15 +216,15 @@
                                     <a href="https://www.crackingthecodinginterview.com">Crack The Coding Interview (Book)</a>
                                     <ul>
                                         <li>Involves a financial expense.</li>
-                                        <li>Must be good at reading and learning from books</li>
-                                        <li>It is strongly recommended to be at somewhat familiar with strongly typed languages and advanced algorithms such as Graphs, Trees, Linked Lists, etc.</li>
+                                        <li>Proficiency in effortlessly reading and acquiring knowledge from written materials.</li>
+                                        <li>It is highly advisable to possess a degree of familiarity with strongly typed programming languages and advanced algorithms, including but not limited to graphs, trees, and linked lists.</li>
                                     </ul>
                                 </li>
                                 <li>
-                                    <span>Solve LeetCode, Hacker Rank, and Project Euler coding challenges</span>
+                                    <span>Address coding challenges on platforms such as <a href="https://leetcode.com">LeetCode.com</a>, <a href="https://www.hackerrank.com">HackerRank.com</a>, and <a href="https://projecteuler.net">ProjectEuler.net</a>.</span>
                                     <ul>
-                                        <li><b>Free</b> and paid premium version</li>
-                                        <li>If you don't want to spend moeny, you can utilize this website in order to understand how to solve the coding challenge.</li>
+                                        <li>Both <b>free</b> and premium paid versions are available.</li>
+                                        <li>Should you prefer not to invest in premium versions, it is frequently possible to find instructional YouTube videos elucidating solutions to specific problems. Moreover, there is a wealth of online resources available across various languages, elucidating and offering solutions for a wide range of issues. Accessing these resources is as simple as utilizing a search engine, such as Google or DuckDuckGo.</li>
                                     </ul>
                                 </li>
                             </ol>
@@ -217,16 +235,59 @@
             <div class="col col-md-9 p-2">
                 <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
+                    <!-- Once you get a job Build your network it is essential maintain good relationships with everybody and don't lose touch. Your network will be able to write referrals for potential job positions. -->
                    
-                            <span>3. Seek assistance in job placement through programs like...</span>
-                            <!-- <ol type="A">
+                            <span>3. Explore job placement support programs, such as...</span>
+
+                            <p class="pt-2 px-5 pb-0">
+                                <b><span style="color: red;">*</span>Important: </b>
+                                <br>
+                                <span>Consistently cultivate and sustain a professional network</span>
+                                
+                                <br>
+                                <i style="font-size: x-small;">Efficient job seeking becomes considerably more manageable when you have established and nurtured an extensive professional network. Building a robust professional network involves maintaining ongoing connections with individuals in your industry through channels like email, text messages, or LinkedIn messaging. You can expand this network by staying in touch with former classmates, colleagues from previous jobs, or individuals you've encountered in the tech sector. It is crucial to uphold positive relationships and sustain ongoing communication. Your network can serve as valuable references when pursuing potential job opportunities. Furthermore, in the event of job loss, having a well-maintained network can facilitate a quicker return to a high-paying position by reaching out to network contacts and requesting referrals to positions within their respective companies. Often, these companies incentivize referrals with bonuses, making your request well-received and beneficial for both parties involved.</i>
+                            </p>
+
+                            <ol type="A">
+
                                 <li>
-                                    <span>___</span>
+                                    <a href="https://hicounselor.com">HiCounselor.com</a>
                                     <ul>
-                                        <li>_____</li>
+                                        <li>Cost money upfront or ISA (income share agreement)</li>
+                                        <li>for job sekers with no prior real world paid work experence (Internships & projects do not count as experence here) there program will help you inorder to get your foot in the door and land a job in tech.</li>
+                                        <li>Once you get a job Build your professional network!</li>
                                     </ul>
                                 </li>
-                            </ol> -->
+                                <li>
+                                    <a href="https://www.pathrise.com">Pathrise.com</a>
+                                    <ul>
+                                        <li>Cost money upfront or ISA (income share agreement)</li>
+                                        <li>for job sekers with no prior real world paid work experence (Internships & projects do not count as experence here) there program will help you inorder to get your foot in the door and land a job in tech.</li>
+                                        <li>Once you get a job Build your professional network!</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="https://www.hatchways.io">HatchWays.io</a></span>
+                                    <ul>
+                                        <li>Utilizing this program as a pathway to secure employment can be challenging, as Hatcdhways suggests that having a four-year degree is preferable. Nevertheless, if you possess the skills to develop projects using the technologies they assess, there is still potential to secure a job with their support.</li>
+                                        <li>for job sekers with no prior real world paid work experence (Internships & projects do not count as experence here) there program will help you inorder to get your foot in the door and land a job in tech.</li>
+                                        <li>Once you get a job Build your professional network!</li>
+                                    </ul>
+                                </li>
+
+                                <!-- ***TODO: Research to better understand
+                                <li>
+                                    <a href="https://www.codepath.org">CodePath.org</a>
+                                    <ul>
+                                        <li>Cost money upfront or ISA (income share agreement)</li>
+                                        <li>for job sekers with no prior real world paid work experence (Internships & projects do not count as experence here) there program will help you inorder to get your foot in the door and land a job in tech.</li>
+                                        <li>Once you get a job Build your professional network!</li>
+                                    </ul>
+                                </li> 
+                                -->
+                                
+                            </ol>
+                            
                        
                 </div>
             </div>
