LinkedIn job seeking info

--- a/templates/home.html
+++ b/templates/home.html
@@ -248,6 +248,15 @@
                                 <i style="font-size: x-small;">Efficient job seeking becomes considerably more manageable when you have established and nurtured an extensive professional network. Building a robust professional network involves maintaining ongoing connections with individuals in your industry through channels like email, text messages, or LinkedIn messaging. You can expand this network by staying in touch with former classmates, colleagues from previous jobs, or individuals you've encountered in the tech sector. It is crucial to uphold positive relationships and sustain ongoing communication. Your network can serve as valuable references when pursuing potential job opportunities. Furthermore, in the event of job loss, having a well-maintained network can facilitate a quicker return to a high-paying position by reaching out to network contacts and requesting referrals to positions within their respective companies. Often, these companies incentivize referrals with bonuses, making your request well-received and beneficial for both parties involved.</i>
                             </p>
 
+                            <p class="pt-2 px-5 pb-0">
+                                <b>Please be advised: </b>
+                                <br>
+                                <span>A significant number of individuals successfully secure employment exclusively through the use of LinkedIn.</span>
+                                
+                                <br>
+                                <i style="font-size: x-small;">An effective method for leveraging LinkedIn to seek employment entails utilizing their job search tool to identify positions for which you possess the requisite qualifications. Following this, you can proceed to submit your applications for these roles and subsequently engage with individuals employed at the respective companies to request job referrals specific to the positions you have applied for.</i>
+                            </p>
+
                             <ol type="A">
 
                                 <li>
