--- a/templates/base.html
+++ b/templates/base.html
@@ -112,10 +112,10 @@
                         <a href="#!" class="text-reset">Home</a>
                     </p> -->
                     <p>
-                        <a href="/code_solutions" class="text-reset">Coding Solutions</a>
+                        <!-- <a href="/code_solutions" class="text-reset">Coding Solutions</a> -->
                     </p>
                     <p>
-                        <a href="/swe_career_guide" class="text-reset">SWE Career Guide</a>
+                        <!-- <a href="/swe_career_guide" class="text-reset">SWE Career Guide</a> -->
                     </p>
                 </div>
                 <!-- Grid column -->
