--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,10 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
         <!-- my styles -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+
+        <!-- Google AdSense -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3187955226926821"
+     crossorigin="anonymous"></script>
     </head>
     <!-- <body style="background: linear-gradient(176deg, rgba(242, 242, 242, 0.95) 0%, #00C2FF 99.65%);"> -->
         <body>
