--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 
         <!-- Google AdSense -->
+        <meta name="google-adsense-account" content="ca-pub-3187955226926821">
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3187955226926821"
      crossorigin="anonymous"></script>
     </head>
