carrer guid updates +more

--- a/templates/search_solutions.html
+++ b/templates/search_solutions.html
@@ -2,10 +2,103 @@
 {% block content %}
 
 <header>
-    Search Solutions
 </header>
 <main>
     
+
+    <section class="p-5 m-5">
+            
+        <div class="row"> <!-- main body -->
+
+            <div class="col-9"> <!-- left part of page -->
+
+                <div class="row"> <!-- Top Ad -->
+                    <div class="col">
+                        
+                    </div>
+                </div>
+
+                <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4 g-4 row-cols-xl-5 row-cols-xxl-6"> <!-- *SEARCH RES* -->
+
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">3 Sum</h5>
+                                <p class="card-text text-center">LeetCode</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">3 Sum</h5>
+                                <p class="card-text text-center">LeetCode</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">3 Sum</h5>
+                                <p class="card-text text-center">LeetCode</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">3 Sum</h5>
+                                <p class="card-text text-center">LeetCode</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">3 Sum</h5>
+                                <p class="card-text text-center">LeetCode</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="card h-100">
+                            <div class="card-body">
+                                <h5 class="card-title text-center">3 Sum</h5>
+                                <p class="card-text text-center">LeetCode</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
+
+                <div class="row"> <!-- Bottom Ad -->
+                    <div class="col">
+                        
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="col-3"> <!-- right side of page-->
+
+                <div class="row"> <!-- Ad -->
+                    <div class="col">
+                        
+                    </div>
+                </div>
+                
+            </div>
+
+        </div>
+
+    </section>
+
+
 </main>
 
 {% endblock content %}
