--- a/templates/base.html
+++ b/templates/base.html
@@ -46,11 +46,11 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/code_solutions">Coding Solutions</a>
+                            <a class="nav-link" href="/search_solutions">Coding Solutions</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="/code_solutions">SWE Career Guide</a>
+                            <a class="nav-link" href="/search_solutions">SWE Career Guide</a>
                         </li>
                         
                         </ul>
@@ -70,14 +70,14 @@
             <nav class="navbar navbar-expand-lg bg-body-tertiary">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="/">Get In Tech</a>
-                    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
-                    </button> -->
-                    <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    </button> 
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
     
                             <li class="nav-item">
-                                <a class="nav-link" href="/code_solutions">Coding Solutions</a>
+                                <a class="nav-link" href="/search_solutions">Coding Solutions</a>
                             </li>
     
                             <li class="nav-item">
@@ -88,7 +88,7 @@
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn btn-outline-dark" type="submit">Search</button>
                         </form>
-                    </div> -->
+                    </div>
                 </div>
             </nav>
             
@@ -118,14 +118,14 @@
         
                 <!-- Grid column -->
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mb-4">
-                    <!-- <p>
-                        <a href="#!" class="text-reset">Home</a>
-                    </p> -->
                     <p>
-                        <!-- <a href="/code_solutions" class="text-reset">Coding Solutions</a> -->
+                        <a href="#!" class="text-reset">Home page</a>
                     </p>
                     <p>
-                        <!-- <a href="/swe_career_guide" class="text-reset">SWE Career Guide</a> -->
+                        <a href="/search_solutions" class="text-reset">Coding Solutions</a>
+                    </p>
+                    <p>
+                        <a href="/swe_career_guide" class="text-reset">SWE Career Guide</a>
                     </p>
                 </div>
                 <!-- Grid column -->
