--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,13 @@
 <main>
    <div class="container ">
         <div class="row py-5">
-            <!-- <div class="col-12 p-5 px-10 "><div class="border rounded" style="height: 100px;">AD</div></div> -->
+
+            <!-- Top Ad -->
+            <div class="col-12 p-5 px-10 "><div style="height: 100px;">
+                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
+
+                <noscript><a href="https://yllix.com/publishers/848887" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
+            </div>
          
             <div class="col col-md-9">
                 <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
@@ -299,10 +305,16 @@
                             
                        
                 </div>
-            </div>
+            
 
-            <div class="col-12 p-5 px-10 "></div>
+                <!-- <div class="col-12 p-5 px-10 "></div> -->
 
+                <!-- Bottom Ad -->
+                <div class="col-12 p-5 px-10 "><div style="height: 100px;">
+                    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
+                    <noscript><a href="https://yllix.com/publishers/848887" target="_blank"><img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" /></a></noscript>
+                </div>
+        </div>
         </div>
     </div>
 
