--- a/templates/home.html
+++ b/templates/home.html
@@ -333,9 +333,17 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-            <div class="d-none d-md-block col-md-auto"> <!-- Right content -->
-                <!-- <div class="border rounded" style="height: 350px; width: 150px;">AD</div> -->
+            <div class="d-none d-lg-block col-lg-auto mx-auto pt-5 mt-5"> <!-- Right content -->
+                <div class="sticky-top pt-5">
+                    <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralSide&pub=848887&format=160x600&ga=g"></script>
+                    <noscript>
+                        <a href="https://yllix.com/publishers/848887" target="_blank">
+                            <img src="//ylx-aff.advertica-cdn.com/pub/160x600.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                        </a>
+                    </noscript>
+                </div>
             </div> 
 
         </div>
@@ -345,7 +353,7 @@
     
 
         <!-- <div class="row">
-            <div class="col col-md-9 p-5">
+            <div class="col p-5">
 
                 
                 <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
@@ -372,9 +380,8 @@
         </div> -->
        
 
-        <div class="d-none d-md-block col-md-auto"></div> 
-    </div>
-    </div>
+ 
+ 
 </main>
 
 {% endblock content %}
