--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
                     <div class="col-12">
                         <div class="text-center px-1 pt-1">
 
-                            <div class="d-none d-md-block col-md-auto"> <!-- lg Web Ad -->
+                            <div class="d-none d-md-block col-md-auto web-ad"> <!-- lg Web Ad -->
                                 <!-- vvv code from Ad site vvv --> 
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
                                 <noscript>
@@ -22,12 +22,22 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
-                            <div class="d-block d-md-none col-auto"> <!-- sm MOB Ad -->
+                            <div class="d-block d-md-none col-auto web-ad"> <!-- sm MOB Ad -->
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
                                 <noscript>
                                     <a href="https://yllix.com/publishers/848887" target="_blank">
                                         <img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                    </a>
+                                </noscript>
+                                <!-- ^^^ code from Ad site ^^^ -->
+                            </div>
+                            <div class="mob-ad">
+                                <!-- vvv code from Ad site vvv -->
+                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
+                                <noscript>
+                                    <a href="https://yllix.com/publishers/848887" target="_blank">
+                                        <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
                                     </a>
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
@@ -309,7 +319,7 @@
                     <div class="col-12">
                         <div class="text-center px-1 pt-1">
 
-                            <div class="d-none d-md-block col-md-auto"> <!-- lg Web Ad -->
+                            <div class="d-none d-md-block col-md-auto web-ad"> <!-- lg Web Ad -->
                                 <!-- vvv code from Ad site vvv --> 
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
                                 <noscript>
@@ -319,7 +329,7 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
-                            <div class="d-block d-md-none col-auto"> <!-- sm MOB Ad -->
+                            <div class="d-block d-md-none col-auto web-ad"> <!-- sm MOB Ad -->
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
                                 <noscript>
@@ -329,10 +339,21 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
+                            <div class="mob-ad">
+                                <!-- vvv code from Ad site vvv -->
+                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
+                                <noscript>
+                                    <a href="https://yllix.com/publishers/848887" target="_blank">
+                                        <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                    </a>
+                                </noscript>
+                                <!-- ^^^ code from Ad site ^^^ -->
+                            </div>
 
                         </div>
                     </div>
                 </div>
+                
             </div>
 
             <div class="d-none d-lg-block col-lg-auto mx-auto pt-5 mt-5"> <!-- Right content -->
