--- a/templates/base.html
+++ b/templates/base.html
@@ -164,9 +164,9 @@
             if(window.mobileCheck()) {
                 webAds = document.getElementsByClassName("web-ad") //[0].style.display = "none";
                 for (let i = 0; i < webAds.length; i++) {
-                    webAds[i].style.display = "none";
+                    // webAds[i].style.display = "none";
                     // webAds[i].style.visibility = "hidden";
-                    // webAds[i].className = "d-none";
+                    webAds[i].className = "d-none";
                 }
             }
         </script>
