--- a/templates/home.html
+++ b/templates/home.html
@@ -4,15 +4,15 @@
 
 <main>
    <div class="container p-0">
-        <div class="row py-5 px-0"> <!-- Main content/body -->
-            <div class="col col-lg-9 px-0"> <!-- Left content -->
+        <div class="row py-2 px-0 m-0"> <!-- Main content/body -->
+            <div class="col col-lg-9 px-0 m-0"> <!-- Left content -->
 
                 <!-- Top Ad -->
-                <div class="row py-2">
-                    <div class="col-12">
-                        <div class="text-center px-1 pt-1">
+                <div class="row py-0 m-0">
+                    <div class="col-12 m-0">
+                        <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-md-block col-md-auto web-ad"> <!-- lg Web Ad -->
+                            <div class="d-none d-lg-block col-md-auto web-ad m-0 pt-5"> <!-- lg Web Ad -->
                                 <!-- vvv code from Ad site vvv --> 
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
                                 <noscript>
@@ -22,7 +22,7 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
-                            <div class="d-block d-md-none col-auto web-ad"> <!-- sm MOB Ad -->
+                            <div class="d-block d-lg-none col-auto web-ad m-0 pt-5"> <!-- sm MOB Ad -->
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
                                 <noscript>
@@ -32,7 +32,7 @@
                                 </noscript>
                                 <!-- ^^^ code from Ad site ^^^ -->
                             </div>
-                            <div class="mob-ad">
+                            <div class="mob-ad m-0">
                                 <!-- vvv code from Ad site vvv -->
                                 <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
                                 <noscript>
@@ -48,9 +48,9 @@
                 </div>
 
                 <!-- 1st Content box -->
-                <div class="row py-2">
-                    <div class="col-12">
-                        <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                <div class="row py-2 m-0">
+                    <div class="col-12 m-0">
+                        <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                             <h3>Pursue a career as a Software Engineer (SWE)</h3>
                             <p>1. Obtain a certification from your local community college in one of the following areas: Front End Web Development (FEW), Back End Web Development (BEW)...</p>
@@ -66,9 +66,9 @@
                 </div>
 
                 <!-- 2nd Content box -->
-                <div class="row py-2">
-                    <div class="col-12">
-                        <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                <div class="row py-2 m-0">
+                    <div class="col-12 m-0">
+                        <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
 
                             <h3 id="steps">The three steps to kickstart your Software Engineering (SWE) career are as follows:</h3>
                             <span>1. Choose a, b, c, or d:</span>
@@ -187,9 +187,9 @@
                 </div> 
             
                 <!-- 3rd Content box -->
-                <div class="row py-2">
-                    <div class="col-12">
-                        <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                <div class="row py-2 m-0">
+                    <div class="col-12 m-0">
+                        <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                         
                             <span>2. You must get good at the technical interview process</span>
 
@@ -256,9 +256,10 @@
                     </div>
                 </div>
 
-                <div class="row py-2">
-                    <div class="col p-2">
-                        <div class="p-5" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
+                <!-- 4th Content box -->
+                <div class="row py-2 m-0">
+                    <div class="col p-2 m-0">
+                        <div class="p-5 m-0" style="border-radius: 10px; border: 1px solid #EDEDED; background: linear-gradient(169deg, rgba(255, 255, 255, 0.75) 8.61%, rgba(255, 255, 255, 0.42) 76.57%);">
                         
                             <span>3. Explore job placement support programs, such as...</span>
 
@@ -315,39 +316,47 @@
                 </div>
                     
                 <!-- Bottom Ad -->
-                <div class="row py-2">
-                    <div class="col-12">
-                        <div class="text-center px-1 pt-1">
+                <div class="row py-0 m-0">
+                    <div class="col-12 m-0">
+                        <div class="text-center px-1 pt-0 m-0">
 
-                            <div class="d-none d-md-block col-md-auto web-ad"> <!-- lg Web Ad -->
-                                <!-- vvv code from Ad site vvv --> 
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
-                                <noscript>
-                                    <a href="https://yllix.com/publishers/848887" target="_blank">
-                                        <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
-                                    </a>
-                                </noscript>
-                                <!-- ^^^ code from Ad site ^^^ -->
-                            </div>
-                            <div class="d-block d-md-none col-auto web-ad"> <!-- sm MOB Ad -->
-                                <!-- vvv code from Ad site vvv -->
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
-                                <noscript>
-                                    <a href="https://yllix.com/publishers/848887" target="_blank">
-                                        <img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
-                                    </a>
-                                </noscript>
-                                <!-- ^^^ code from Ad site ^^^ -->
-                            </div>
-                            <div class="mob-ad">
-                                <!-- vvv code from Ad site vvv -->
-                                <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
-                                <noscript>
-                                    <a href="https://yllix.com/publishers/848887" target="_blank">
-                                        <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
-                                    </a>
-                                </noscript>
-                                <!-- ^^^ code from Ad site ^^^ -->
+                            <div class="row py-0 m-0">
+                                <div class="col-12 m-0">
+                                    <div class="text-center px-1 pt-0 m-0">
+
+                                        <div class="d-none d-lg-block col-md-auto web-ad m-0"> <!-- lg Web Ad -->
+                                        <!-- vvv code from Ad site vvv --> 
+                                        <script type="text/javascript" src="https://udbaa.com/bnr.php?section=GeneralTopBottom&pub=848887&format=728x90&ga=g"></script>
+                                        <noscript>
+                                            <a href="https://yllix.com/publishers/848887" target="_blank">
+                                                <img src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                            </a>
+                                        </noscript>
+                                        <!-- ^^^ code from Ad site ^^^ -->
+                                    </div>
+                                    <div class="d-block d-lg-none col-auto web-ad m-0"> <!-- sm MOB Ad -->
+                                        <!-- vvv code from Ad site vvv -->
+                                        <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneralTopBottom&pub=848887&format=468x60&ga=g"></script>
+                                        <noscript>
+                                            <a href="https://yllix.com/publishers/848887" target="_blank">
+                                                <img src="//ylx-aff.advertica-cdn.com/pub/468x60.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                            </a>
+                                        </noscript>
+                                        <!-- ^^^ code from Ad site ^^^ -->
+                                    </div>
+                                    <div class="mob-ad m-0">
+                                        <!-- vvv code from Ad site vvv -->
+                                        <script type="text/javascript" src="https://udbaa.com/bnr.php?section=smGeneraTopBottom&pub=848887&format=300x50&ga=g"></script>
+                                        <noscript>
+                                            <a href="https://yllix.com/publishers/848887" target="_blank">
+                                                <img src="//ylx-aff.advertica-cdn.com/pub_zn9ugf.png" style="border:none;margin:0;padding:0;vertical-align:baseline;" alt="ylliX - Online Advertising Network" />
+                                            </a>
+                                        </noscript>
+                                        <!-- ^^^ code from Ad site ^^^ -->
+                                    </div>
+
+                                    </div>
+                                </div>
                             </div>
 
                         </div>
